# Rewired

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  start_dashboard.bat
.github/: copilot-instructions.md
.github/workflows/: ci.yml
config/: notifications.yaml  portfolio.yaml  signals.yaml  universe.yaml
data/: capex_cache.json  capex_quarterly_history.json  edgar_cache.json  regime_state.json
src/rewired/: __init__.py  __main__.py  cli.py  io.py  logging_config.py  pipeline.py  resilience.py  scheduler.py
src/rewired/agent/: analyst.py  evaluator.py  gemini.py  prompts.py  rebalancer.py
src/rewired/broker/: __init__.py  ibkr.py  interface.py
src/rewired/data/: ai_health.py  broker.py  edgar.py  fmp.py  fx.py  macro.py  market_hours.py  prices.py  sentiment.py  ticker_resolver.py
src/rewired/gui/: app.py  charts.py  components.py  i18n.py  state.py
src/rewired/models/: config.py  evaluation.py  portfolio.py  signals.py  universe.py
src/rewired/notifications/: console.py  dispatcher.py  telegram.py
src/rewired/portfolio/: manager.py  sizing.py  tracker.py
src/rewired/signals/: ai_health_signal.py  composite.py  engine.py  macro_signal.py  rules.py  sentiment_signal.py
tests/: conftest.py  test_ai_health.py  test_broker.py  test_composite.py  test_config_validation.py  test_fmp.py  test_gemini.py  test_gui_app.py  test_hysteresis.py  test_pipeline_integration.py  test_prices.py  test_rules.py  test_scoring.py  test_sizing.py  test_sizing_properties.py
